fixed spacing in in-progress section

--- a/style.css
+++ b/style.css
@@ -598,7 +598,7 @@ projects section
 	display: flex;
 	flex-direction: column;
 	gap: 3rem;
-	width: 100%;
+	/* width: 100%; */
 }
 
 .projects__card {
@@ -670,6 +670,7 @@ projects section
 .projects__image {
 	width: 100%;
 	height: 100%;
+	flex: 1;
 }
 
 .img {
@@ -709,7 +710,7 @@ projects section
 		place-items: center;
 	}
 
-	.projects_image .img {
+	.projects_image .img{
 		-o-object-fit: contain;
 		   object-fit: contain;
 		padding: 0;
@@ -718,6 +719,12 @@ projects section
 	.project__buttons {
 		grid-template-columns: 1fr 1fr;
 	}
+}
+
+/* in progress projects section */
+.in-progress {
+	
+	/* width: 100%; */
 }
 
 /* about section */
